<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background_color"
        android:layoutDirection="rtl"
        tools:context=".view.fragment.HomeFragment">

        <TextView
            android:id="@+id/textView_title_fragmentHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/iransans_bold"
            android:paddingStart="16dp"
            android:text="@string/currencies"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_currency_fragmentHome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/constraintLayout_convertor_fragmentHome"
            app:layout_constraintTop_toBottomOf="@id/textView_title_fragmentHome" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_convertor_fragmentHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_convertor_activity_main"
            android:elevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ProgressBar
                android:id="@+id/progressbar_loading_fragmentHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_cancel_fragmentHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="#00BFA5"
                android:fontFamily="@font/iransanse_medium"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/progressbar_loading_fragmentHome"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_convert_fragmentHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#00BFA5"
                android:fontFamily="@font/iransanse_medium"
                android:text="@string/convert"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editText_amount_fragmentHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/iransanse_medium"
                android:hint="@string/enter_amount"
                android:inputType="number"
                android:maxLength="8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView_exchangeRateTitle_fragmentHome" />

            <TextView
                android:id="@+id/textView_from_fragmentHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/iransanse_medium"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@id/editText_amount_fragmentHome"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_fromCurrency_fragmentHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:minWidth="24dp"
                android:minHeight="24dp"
                app:layout_constraintBottom_toBottomOf="@id/textView_from_fragmentHome"
                app:layout_constraintStart_toEndOf="@id/textView_from_fragmentHome"
                app:layout_constraintTop_toTopOf="@id/textView_from_fragmentHome" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_toCurrency_fragmentHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:minWidth="24dp"
                android:minHeight="24dp"
                app:layout_constraintBottom_toBottomOf="@id/textView_from_fragmentHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView_from_fragmentHome" />

            <TextView
                android:id="@+id/textView_to_fragmentHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/iransanse_medium"
                android:text="@string/to"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@id/spinner_toCurrency_fragmentHome"
                app:layout_constraintEnd_toStartOf="@id/spinner_toCurrency_fragmentHome"
                app:layout_constraintTop_toTopOf="@id/spinner_toCurrency_fragmentHome" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imageButton_replacement_fragmentHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_compare_arrows_24"
                app:layout_constraintBottom_toBottomOf="@id/spinner_fromCurrency_fragmentHome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spinner_fromCurrency_fragmentHome" />

            <TextView
                android:id="@+id/textView_exchangeRateTitle_fragmentHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/iransanse_medium"
                android:paddingStart="16dp"
                android:text="@string/convert_currency"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/textView_from_fragmentHome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

    <!--TODO :: Complete convertor part ; implement currencies list-->